--- a/conf/vanilla/lang/en/vm/sounds.xml
+++ b/conf/vanilla/lang/en/vm/sounds.xml
@@ -334,7 +334,10 @@
   <macro name="voicemail_say_phone_number">
     <input pattern="^000|^$|^[Aa]non|^[Pp]rivate" break_on_match="true">
       <match>
-        <!-- add 'anonymous caller' sound here -->
+        <action function="play-file" data="ivr/ivr-this_is_a_call_from.wav"/>
+        <action function="execute" data="sleep(100)"/>
+        <action function="play-file" data="ivr/ivr-anonymous_caller.wav"/>
+        <action function="execute" data="sleep(500)"/>
       </match>
     </input>
     <input pattern="^(.*)$">
