--- a/src/mod/languages/mod_v8/conf/autoload_configs/v8.conf.xml
+++ b/src/mod/languages/mod_v8/conf/autoload_configs/v8.conf.xml
@@ -1,4 +1,8 @@
 <configuration name="v8.conf" description="Google V8 JavaScript Plug-Ins">
+  <settings>
+    <!-- <param name="xml-handler-script" value="directory.js"/> -->
+    <!-- <param name="xml-handler-bindings" value="directory"/> -->
+  </settings>
   <modules>
     <!-- <load module="mod_v8_skel"/> -->
   </modules>
