FS-9928 [mod_v8] Implement Event Hooks in JavaScript

--- a/src/mod/languages/mod_v8/conf/autoload_configs/v8.conf.xml
+++ b/src/mod/languages/mod_v8/conf/autoload_configs/v8.conf.xml
@@ -2,6 +2,8 @@
   <settings>
     <!-- <param name="xml-handler-script" value="directory.js"/> -->
     <!-- <param name="xml-handler-bindings" value="directory"/> -->
+    <!-- <hook event="CUSTOM" subclass="sofia::register" script="catch-event.js"/> -->
+    <!-- <hook event="CHANNEL_HANGUP" script="hangup-event.js"/> -->
   </settings>
   <modules>
     <!-- <load module="mod_v8_skel"/> -->
